[tool.poetry]
name = "aw-fakedata"
version = "0.1.0"
description = ""
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.scripts]
aw-fakedata = "aw_fakedata:main"

[tool.poetry.dependencies]
python = "^3.7"
aw-client = "^0.5.3"
click = "*"

[tool.poetry.dev-dependencies]
mypy = "^0.902"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
